Try again, to fix target area. z-index this time

--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -123,6 +123,7 @@ img {
     padding-bottom: 4px;
     border-bottom: solid 2px;
     display: inline-block;
+    z-index: 2;
 
     &:hover {
       text-decoration: none;
